--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>com.mm.demo</groupId>
     <artifactId>javaconcurrencyinpractice</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+<dependencies>
+    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>3.1</version>
+    </dependency>
+</dependencies>
 
 </project>
